--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "echarts-for-react": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-jsx": "^1.0.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "rsuite": "^5.65.0",
